--- a/app/views/analyses/_analysis.html.erb
+++ b/app/views/analyses/_analysis.html.erb
@@ -5,8 +5,11 @@
   <span class="summary"><%= analysis.summary %></span>
 
   <span class="metadata">
-    <span class="date">Added on <%= analysis.created_at.strftime('%B %d, %Y') %> by <%= analysis.creator.username %></span><br/>
+    <span class="date">Added on <%= analysis.created_at.strftime('%B %d, %Y') %> by <%= analysis.creator.username %></span>
+    &mdash;
+
     <span class="used-in">Used in <%= analysis.assignments.size %> <%= 'assignment'.pluralize(analysis.assignments.size) %> and <%= analysis.examples.size %> <%= 'example'.pluralize(analysis.examples.size) %></span><br/>
+    
     <span class="tags"><%= render(partial: "tags/tag_badge", 
     collection: sort_by(analysis.tags, :text), as: :tag) %></span>
   </span>
