--- a/app/views/assignments/_assignment_search_result.html.erb
+++ b/app/views/assignments/_assignment_search_result.html.erb
@@ -8,8 +8,14 @@
   <span class="summary"><%= assignment.summary %></span>
 
   <span class="metadata">
-    <span class="learning_curve">Learning curve: <i><%= assignment.learning_curve == "" ? "unknown" : assignment.learning_curve %></i></span><br/>
+    <span class="added-by">Added on <%= assignment.created_at.strftime('%B %d, %Y') %> by <%= assignment.creator.username %></span>
+    &mdash;
+
+    <span class="learning_curve">Learning curve: <i><%= assignment.learning_curve == "" ? "unknown" : assignment.learning_curve %></i></span>
+    &mdash;
+
     <span class="years">Taught <%= assignment.assignment_results.size %> <%= 'time'.pluralize(assignment.assignment_results.size) %></span><br/>
+    
     <span class="tags"><%= render(partial: "tags/tag_badge", 
     collection: sort_by(assignment.tags, :text), as: :tag) %></span>
   </span>
