--- a/app/views/web_resources/_web_resource.html.erb
+++ b/app/views/web_resources/_web_resource.html.erb
@@ -28,17 +28,17 @@
 </p>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated assignments", vertical_from: WebResource.new, 
+  locals: {title: "Assignments", vertical_from: web_resource, 
            vertical_to: Assignment.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated analyses", vertical_from: WebResource.new, 
+  locals: {title: "Analyses", vertical_from: web_resource, 
            vertical_to: Analysis.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated software", vertical_from: WebResource.new, 
+  locals: {title: "Software", vertical_from: web_resource, 
            vertical_to: Software.new}) %>
 
 <%= render(partial: "verticals_shared/related_vertical",
-  locals: {title: "Associated datasets", vertical_from: WebResource.new, 
+  locals: {title: "Datasets", vertical_from: web_resource, 
            vertical_to: Dataset.new}) %>
