Fixed tests to work with new way of displaying description and outcome summary content.

--- a/app/views/assignment_results/_assignment_result.html.erb
+++ b/app/views/assignment_results/_assignment_result.html.erb
@@ -51,7 +51,7 @@
 
 <div class="outcome_summary-wrapper">
   <h2>Outcome summary</h2>
-  <div class="description">
+  <div class="outcome_summary">
     <%= sanitize_text(assignment_result.outcome_summary).html_safe %>
   </div>
 </div>
