--- a/app/views/attachments/_attachment_list_item.html.erb
+++ b/app/views/attachments/_attachment_list_item.html.erb
@@ -5,24 +5,60 @@ This is expecting the following local variables:
   editable -- if true and can_edit is true, then a 'delete' button will appear 
               next to  each attachment. Defaults to false.
 %>
-<li>
-  <span class="attachment-name"
-    ><%= link_to attachment.file_attachment_file_name, 
-      attachment.file_attachment.url %></span> 
-  <span class="size">
-    (<%= number_to_human_size attachment.file_attachment_file_size %>)
+<li data-attachment-id="<%= attachment.id %>">
+  <span class="file-attachment-wrapper">
+    <span class="attachment-name"
+      ><%= link_to attachment.file_attachment_file_name, 
+        attachment.file_attachment.url %></span> 
+    <span class="size">
+      (<%= number_to_human_size attachment.file_attachment_file_size %>)
+    </span>
+    <% if attachment.description.size > 0 %>
+      &mdash;<%= attachment.description %>
+    <% end %>
+
+    <% if can_edit? and editable and defined? vertical_from %>
+      <%= form_for(attachment, method: :delete,
+          url: vertical_attachment_path(vertical_from, attachment), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Remove</button>
+      <% end %>
+
+      
+      <button type="submit" class="btn btn-default btn-sm toggle-edit-file-attachment">
+        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+
+    <% end %>
   </span>
-  <% if attachment.description.size > 0 %>
-    &mdash;<%= attachment.description %>
-  <% end %>
 
   <% if can_edit? and editable and defined? vertical_from %>
-    <%= form_for(attachment, method: :delete,
-        url: vertical_attachment_path(vertical_from, attachment), 
-        html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Remove</button>
-    <% end %>
+
+    <span class="file-attachment-wrapper hidden">
+      <%= form_for(attachment, method: :post,
+          url: vertical_attachment_path(vertical_from, attachment), 
+          html: {class: "inline"}) do |f| %>
+
+        <table>
+          <tr><td>Filename</td><td>Description</td><td>Replace file</td><td></td></tr>
+          <tr>
+            <td><%= f.text_field :file_attachment_file_name, class: "submit-toggle-field" %></td>
+            <td><%= f.text_field :description %></td>
+            <td><%= f.file_field :file_attachment, class: "submit-toggle-field" %></td>
+            <td>
+              <button type="submit" class="btn btn-primary btn-sm">Save</button>
+              <button type="submit" class="btn btn-danger btn-sm toggle-edit-file-attachment"
+                >Cancel</button>
+            </td>
+          </tr>
+        </table>
+      <% end %>
+
+
+    </span>
   <% end %>
+
 </li>
+
