Attachment filenames cannot be easily renamed, so I've removed that feature.
Improved the attchment upload and edit UI.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -87,3 +87,21 @@ li .snippet {
 div.entries {
   margin-top: 1em;
 }
+
+.file-attachment-wrapper {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.attachment-form-wrapper {
+  td {
+    padding-right: 1em;
+  }
+  h3 {
+    margin-top: 0;
+  }
+
+  margin-bottom: .5em;
+  border: 1px solid gray;
+  padding: .5em;
+}
