--- a/app/views/attachments/_attachment_list_item.html.erb
+++ b/app/views/attachments/_attachment_list_item.html.erb
@@ -42,11 +42,14 @@ This is expecting the following local variables:
           html: {class: "inline"}) do |f| %>
 
         <table>
-          <tr><td>Filename</td><td>Description</td><td>Replace file</td><td></td></tr>
           <tr>
-            <td><%= f.text_field :file_attachment_file_name, class: "submit-toggle-field" %></td>
-            <td><%= f.text_field :description, class: "submit-toggle-field" %></td>
-            <td><%= f.file_field :file_attachment, class: "submit-toggle-field" %></td>
+            <td>
+              <%= attachment.file_attachment_file_name %> &mdash;
+              <%= f.text_field :description, class: "submit-toggle-field", placeholder: 'Enter a description' %>
+            </td>
+            <td>
+              <%= f.file_field :file_attachment, class: "submit-toggle-field" %>
+            </td>
             <td>
               <button type="submit" class="btn btn-primary btn-sm" disabled="disabled">Save</button>
               <button class="btn btn-danger btn-sm toggle-edit-file-attachment"
