--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,5 @@
+@import "jquery-ui/sortable";
+@import "jquery-ui/theme";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "00-general";
