Added grips to attachment list items.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -106,28 +106,9 @@ div.entries {
   padding: .5em;
 }
 
-li.file-attachment {
-  // Taken from: https://codepen.io/zachariab/pen/wkrbc
-  span.drag-handle {
-    font-size: 1.2em;
-    content: '....';
-    width: 10px;
-    height: 20px;
-    display: inline-block;
-    overflow: hidden;
-    line-height: 5px;
-    padding: 3px 4px;
-    cursor: move;
-    vertical-align: middle;
-    margin-top: -.7em;
-    margin-right: .3em;
-    font-size: 12px;
-    font-family: sans-serif;
-    letter-spacing: 2px;
-    color: #cccccc;
-    text-shadow: 1px 0 1px black;
-  }
-  span.drag-handle::after {
-    content: '.. .. .. ..';
-  }
+.grip {
+  vertical-align: middle;
+  transform: scale(1.5, 1.5);
+  margin-top: -.5em;
+  cursor: grab; 
 }
