--- a/app/views/attachments/_attachment_list_item.html.erb
+++ b/app/views/attachments/_attachment_list_item.html.erb
@@ -7,7 +7,8 @@ This is expecting the following local variables:
 %>
 <li data-attachment-id="<%= attachment.id %>" class="file-attachment">
   <span class="file-attachment-wrapper">
-    <span class="drag-handle"></span>
+    <!-- <span class="drag-handle"></span> -->
+    <span class="ui-icon ui-icon-grip-dotted-vertical grip" style="display:inline-block"></span>
 
     <span class="attachment-name"
       ><%= link_to attachment.file_attachment_file_name, 
