--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -116,3 +116,17 @@ div.entries {
 .file-attachment {
   margin-bottom: .5em;
 }
+
+.dragging {
+  // border: 2px solid steelblue;
+  // border-radius: 10px;
+  // padding: .5em;
+  // box-shadow: 1px 1px 1px 1px #aaa;
+  // background: white;
+  // height: 3.5em !important;
+  // vertical-align: middle;
+  // //display: block;
+  // box-sizing: border-box;
+  background: #eee;
+  border: 1px solid #aaa;
+}
