Added a 'implements these analyses' section to software pages.

--- a/app/views/analyses/connect_index.html.erb
+++ b/app/views/analyses/connect_index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Connect analysises") %>
+<% provide(:title, "Connect analyses") %>
 <div class="container resource-modification">
   <h1><%= yield :title %></h1>
   <p>
