--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -73,11 +73,16 @@
   </div>
 
   <%= render(partial: "verticals_shared/related_vertical",
-    locals: {title: "Assignments", vertical_from: @software, 
+    locals: {title: "Analyses implemented", vertical_from: @software, 
+             vertical_to: Analysis.new, editable: true}) %>
+
+
+  <%= render(partial: "verticals_shared/related_vertical",
+    locals: {title: "Assignments used in", vertical_from: @software, 
              vertical_to: Assignment.new}) %>
 
   <div class="examples">
-    <h2>Examples</h2>
+    <h2>Examples used in</h2>
     <% if can_edit? %>
       <a href="<%= new_vertical_example_path @software %>"
         ><button class="btn btn-sm btn-default">Add new</button
