--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,6 +47,7 @@
                 <li><%= link_to "Add an analysis", new_analysis_path %></li>
                 <li><%= link_to "Add software", new_software_path %></li>
                 <li><%= link_to "Add a dataset", new_dataset_path %></li>
+                <li><%= link_to "Add an example", new_example_path %></li>
                 <% if current_user.is_admin? %>
                   <li class="divider"></li>
                   <li><%= link_to "Administer users", users_path %></li>
@@ -69,6 +70,7 @@
           <li><%= link_to "Analyses", analyses_path %></li>      
           <li><%= link_to "Software", software_index_path %></li>      
           <li><%= link_to "Datasets", datasets_path %></li>      
+          <li><%= link_to "Examples", examples_path %></li>      
 
           <% unless defined? @is_search_page %>
             <li>
