--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -12,16 +12,18 @@
 
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
-
-      <%= render(partial: 'example', locals: {
-        print_header: false, example: @example}) %>
-        
-        <%= render(partial: "attachments/attachment_list",
-            locals: { 
-              vertical_from: @example, 
-              data: @example.attachments,
-              editable: true,
-              title_tag: :h2 }) %>
+  
+      <h2>Description</h2>
+      <div class="description">
+        <%= sanitize_text(@example.description).html_safe %>
+      </div>
+      
+      <%= render(partial: "attachments/attachment_list",
+          locals: { 
+            vertical_from: @example, 
+            data: @example.attachments,
+            editable: true,
+            title_tag: :h2 }) %>
 
 
       <%= render(partial: "verticals_shared/related_vertical",
