Examples can link to other verticals and be deleted.

--- a/app/assets/stylesheets/vertical.scss
+++ b/app/assets/stylesheets/vertical.scss
@@ -130,3 +130,12 @@ div.entries {
   background: #eee;
   border: 1px solid #aaa;
 }
+
+.vertical-banner {
+  font-size: 175%;
+  color: #555;
+  font-style: italic;
+  margin-top: -.5em;
+  padding-top: 0;
+  display: block;
+}
