Added examples tile to homepage.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,7 @@
 <%= link_to "Analyses", analyses_path, class: "vertical-launch" %>
 <%= link_to "Software", software_index_path, class: "vertical-launch" %>
 <%= link_to "Datasets", datasets_path, class: "vertical-launch" %>
+<%= link_to "Examples", examples_path, class: "vertical-launch" %>
 
 
 
