Fixed bug with attachments in search; added examples to search interface.

--- a/app/views/search/show.html.erb
+++ b/app/views/search/show.html.erb
@@ -52,6 +52,7 @@
     <span data-vertical="analyses" class="analyses vertical-tab">Analyses</span>
     <span data-vertical="software" class="software vertical-tab">Software</span>
     <span data-vertical="datasets" class="datasets vertical-tab">Datasets</span>
+    <span data-vertical="examples" class="examples vertical-tab">Examples</span>
   </div>
   
   
