--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -2,17 +2,25 @@
 <div class="container analysis-page" data-analysis-id="<%= @analysis.id %>">
   <h1><span class="name"><%= @analysis.name %></span>
   <% if can_edit? %>
-    <%= link_to edit_analysis_path(@analysis.id)  do 
-      %><button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button
-    ><% end %>
-    <%= link_to @analysis, method: :delete, data: {
-        confirm: "Are you sure you want to delete this page?"} do 
-      %><button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-      Delete </button
-    ><% end %>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+      Enable editing
+    </button>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+      Disable editing
+    </button>
+    <span class="edit-toggle">
+      <%= link_to edit_analysis_path(@analysis.id)  do 
+        %><button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        </button
+      ><% end %>
+      <%= link_to @analysis, method: :delete, data: {
+          confirm: "Are you sure you want to delete this page?"} do 
+        %><button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        Delete </button
+      ><% end %>
+    </span>
   <% end %>
   </h1>
 
@@ -38,12 +46,14 @@
   <div class="tags">
     <h2>Tags</h2>
     <% if can_edit? %>
-      <a href="<%= new_vertical_tag_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add new</button
-      ></a>
-      <a href="<%= vertical_tag_index_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add existing</button
-      ></a>
+      <span class="edit-toggle">
+        <a href="<%= new_vertical_tag_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add new</button
+        ></a>
+        <a href="<%= vertical_tag_index_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add existing</button
+        ></a>
+      </span>
     <% end %>
     <ul>
       <%= render(partial: "tags/tag_badge", 
@@ -56,12 +66,14 @@
   <div class="web-resources">
     <h2>Web resources</h2>
     <% if can_edit? %>
-      <a href="<%= new_vertical_web_resource_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add new</button
-      ></a>
-      <a href="<%= vertical_web_resource_index_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add existing</button
-      ></a>
+      <span class="edit-toggle">
+        <a href="<%= new_vertical_web_resource_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add new</button
+        ></a>
+        <a href="<%= vertical_web_resource_index_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add existing</button
+        ></a>
+      </span>
     <% end %>
     <ul>
       <%= render(partial: "web_resources/web_resource_list_item", 
@@ -85,12 +97,14 @@
   <div class="examples">
     <h2>Examples used in</h2>
     <% if can_edit? %>
-      <a href="<%= new_vertical_example_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add new</button
-      ></a>
-      <a href="<%= vertical_example_index_path @analysis %>"
-        ><button class="btn btn-sm btn-default">Add existing</button
-      ></a>
+      <span class="edit-toggle">
+        <a href="<%= new_vertical_example_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add new</button
+        ></a>
+        <a href="<%= vertical_example_index_path @analysis %>"
+          ><button class="btn btn-sm btn-default">Add existing</button
+        ></a>
+      </span>
     <% end %>
 
     <%= render(partial: "examples/example", 
