--- a/app/views/assignment_results/_assignment_result_list_item.html.erb
+++ b/app/views/assignment_results/_assignment_result_list_item.html.erb
@@ -6,19 +6,21 @@
   (<%= link_to "details", assignment_result_path(assignment_result) %>)
 
   <% if can_edit? %>
-    <%= form_for(assignment_result, method: :delete,
-        url: assignment_result_path(assignment_result), 
+    <span class="edit-toggle">
+      <%= form_for(assignment_result, method: :delete,
+          url: assignment_result_path(assignment_result), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Delete</button>
+      <% end %>
+      <%= form_for(assignment_result, method: :get,
+        url: edit_assignment_result_path(assignment_result),
         html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Delete</button>
-    <% end %>
-    <%= form_for(assignment_result, method: :get,
-       url: edit_assignment_result_path(assignment_result),
-       html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-    </button>
-    <% end %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+      <% end %>
+    </span>
   <% end %>
 </li>
