--- a/app/views/assignment_results/show.html.erb
+++ b/app/views/assignment_results/show.html.erb
@@ -3,11 +3,13 @@
   <h1><span class="name">Assignment result for 
       "<%= @assignment_result.assignment.name %>"</span>
     <% if can_edit? %>
-      <%= link_to edit_assignment_result_path(@assignment_result)  do %>
-        <button type="button" class="btn btn-default btn-md">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-        </button>
-      <% end %>
+      <span class="edit-toggle">
+        <%= link_to edit_assignment_result_path(@assignment_result)  do %>
+          <button type="button" class="btn btn-default btn-md">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+          </button>
+        <% end %>
+      </span>
     <% end %>
   </h1>
 
