--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -2,17 +2,26 @@
 <div class="container assignment-page" data-assignment-id="<%= @assignment.id %>">
   <h1><span class="name"><%= @assignment.name %></span>
   <% if can_edit? %>
-    <%= link_to edit_assignment_path(@assignment.id)  do  
-      %><button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button
-    ><% end %>
-    <%= link_to @assignment, method: :delete, data: {
-        confirm: "Are you sure you want to delete this page?"} do  
-      %><button type="button" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-      Delete </button
-    ><% end %>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+      Enable editing
+    </button>
+    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+      Disable editing
+    </button>
+
+    <span class="edit-toggle">
+      <%= link_to edit_assignment_path(@assignment.id)  do  
+        %><button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        </button
+      ><% end %>
+      <%= link_to @assignment, method: :delete, data: {
+          confirm: "Are you sure you want to delete this page?"} do  
+        %><button type="button" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        Delete </button
+      ><% end %>
+    </span>
   <% end %>
   </h1>
 
@@ -36,12 +45,14 @@
         <td class="tags">
           
           <% if can_edit? %>
-            <a href="<%= new_vertical_tag_path @assignment %>"
-              ><button class="btn btn-sm btn-default">Add new</button
-            ></a>
-            <a href="<%= vertical_tag_index_path @assignment %>"
-              ><button class="btn btn-sm btn-default">Add existing</button
-            ></a>
+            <span class="edit-toggle">
+              <a href="<%= new_vertical_tag_path @assignment %>"
+                ><button class="btn btn-sm btn-default">Add new</button
+              ></a>
+              <a href="<%= vertical_tag_index_path @assignment %>"
+                ><button class="btn btn-sm btn-default">Add existing</button
+              ></a>
+            </span>
           <% end %>
           <%= render(partial: "tags/tag_badge", 
             collection: sort_by(@assignment.tags, :text), as: :tag,
@@ -79,12 +90,14 @@
   <div class="web-resources">
     <h2>Web resources</h2>
     <% if can_edit? %>
-      <a href="<%= new_vertical_web_resource_path @assignment %>"
-        ><button class="btn btn-sm btn-default">Add new</button
-      ></a>
-      <a href="<%= vertical_web_resource_index_path @assignment %>"
-        ><button class="btn btn-sm btn-default">Add existing</button
-      ></a>
+      <span class="edit-toggle">
+        <a href="<%= new_vertical_web_resource_path @assignment %>"
+          ><button class="btn btn-sm btn-default">Add new</button
+        ></a>
+        <a href="<%= vertical_web_resource_index_path @assignment %>"
+          ><button class="btn btn-sm btn-default">Add existing</button
+        ></a>
+      </span>
     <% end %>
     <ul>
       <%= render(partial: "web_resources/web_resource_list_item", 
@@ -99,9 +112,11 @@
   <div class="assignment-results">
    <h2>Results</h2>
     <% if can_edit? %>
-      <a href="<%= new_assignment_assignment_result_path @assignment %>"
-        ><button class="btn btn-sm btn-default">Add new</button
-      ></a>
+      <span class="edit-toggle">
+        <a href="<%= new_assignment_assignment_result_path @assignment %>"
+          ><button class="btn btn-sm btn-default">Add new</button
+        ></a>
+      </span>
     <% end %>
     <ul>
       <%= render(partial: "assignment_results/assignment_result_list_item", 
