--- a/app/views/attachments/_attachment_list_item.html.erb
+++ b/app/views/attachments/_attachment_list_item.html.erb
@@ -8,7 +8,10 @@ This is expecting the following local variables:
 <li data-attachment-id="<%= attachment.id %>" class="file-attachment" data-display-position="<%= attachment.display_position %>">
   <span class="file-attachment-wrapper">
     <% if can_edit? and editable %>
-      <span class="ui-icon ui-icon-grip-dotted-vertical grip" style="display:inline-block" title="Reorder attachments."></span>
+      <span class="edit-toggle">
+        <span class="ui-icon ui-icon-grip-dotted-vertical grip" 
+          style="display:inline-block" title="Reorder attachments."></span>
+      </span>
     <% end %>
 
     <span class="attachment-name"
@@ -22,19 +25,20 @@ This is expecting the following local variables:
     <% end %>
 
     <% if can_edit? and editable and defined? vertical_from %>
-      <%= form_for(attachment, method: :delete,
-          url: vertical_attachment_path(vertical_from, attachment), 
-          html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-          Remove</button>
-      <% end %>
+      <span class="edit-toggle">
+        <%= form_for(attachment, method: :delete,
+            url: vertical_attachment_path(vertical_from, attachment), 
+            html: {class: "inline"}) do |f| %>
+          <button type="submit" class="btn btn-default btn-sm">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+            Remove</button>
+        <% end %>
 
-      
-      <button type="submit" class="btn btn-default btn-sm toggle-edit-file-attachment">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
-
+        
+        <button type="submit" class="btn btn-default btn-sm toggle-edit-file-attachment">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        </button>
+      </span>
     <% end %>
   </span>
 
