--- a/app/views/examples/_example_list_item.html.erb
+++ b/app/views/examples/_example_list_item.html.erb
@@ -13,19 +13,21 @@ This is expecting the following local variables:
     ><%= link_to example.title, example_path(example) %></span> 
   
   <% if can_edit? and defined? vertical %>
-    <%= form_for(example, method: :delete,
-        url: vertical_example_path(vertical, example), 
+    <span class="edit-toggle">
+      <%= form_for(example, method: :delete,
+          url: vertical_example_path(vertical, example), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Disassociate</button>
+      <% end %>
+      <%= form_for(example, method: :get,
+        url: edit_vertical_example_path(vertical, example),
         html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Disassociate</button>
-    <% end %>
-    <%= form_for(example, method: :get,
-       url: edit_vertical_example_path(vertical, example),
-       html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-    </button>
-    <% end %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+      <% end %>
+    </span>
   <% end %>
 </li>
