--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -2,20 +2,28 @@
 <div class="container resource-modification">
   <h1><span class="name"><%= @example.title %></span>
     <% if can_edit? %>
-      <%= link_to edit_example_path(@example)  do %>
-        <button type="button" class="btn btn-default btn-md">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-        </button>
-      <% end %>
-      <%= link_to @example, method: :delete, data: {
-          confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Delete </button
-      ><% end %>
+      <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+        Enable editing
+      </button>
+      <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+        Disable editing
+      </button>
+
+      <span class="edit-toggle">
+        <%= link_to edit_example_path(@example)  do %>
+          <button type="button" class="btn btn-default btn-md">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+          </button>
+        <% end %>
+        <%= link_to @example, method: :delete, data: {
+            confirm: "Are you sure you want to delete this page?"} do  
+          %><button type="button" class="btn btn-default btn-sm">
+            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Delete </button
+        ><% end %>
+      </span>
     <% end %>
   </h1>
-  <span class="vertical-banner">Example</span>
 
   <div class="row">
     <div class="col-md-12 col-md-offset-0">
