--- a/app/views/tags/_tag_badge.html.erb
+++ b/app/views/tags/_tag_badge.html.erb
@@ -3,12 +3,14 @@
   <%= link_to tag.text, tag_path(tag) %>
   
   <% if can_edit? and defined? vertical %>
-    <%= link_to(edit_vertical_tag_path(vertical, tag), class: :edit) do 
-      %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span
-    ><% end %>
-    
-    <%= link_to(vertical_tag_path(vertical, tag), method: :delete, class: :delete) do 
-      %><span class="glyphicon glyphicon-trash" aria-hidden="true"></span
-    ><% end %>
+    <span class="edit-toggle">
+      <%= link_to(edit_vertical_tag_path(vertical, tag), class: :edit) do 
+        %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span
+      ><% end %>
+      
+      <%= link_to(vertical_tag_path(vertical, tag), method: :delete, class: :delete) do 
+        %><span class="glyphicon glyphicon-trash" aria-hidden="true"></span
+      ><% end %>
+    </span>
   <% end %>
 </div>
