--- a/app/views/verticals_shared/_vertical_list_item.html.erb
+++ b/app/views/verticals_shared/_vertical_list_item.html.erb
@@ -5,19 +5,21 @@
     &ndash; <%= get_snippet(vertical_to.summary, 200)%>
   </span>
   <% if can_edit? and editable and defined? vertical_from %>
-    <%= form_for(vertical_to, method: :delete,
-        url: vertical_vertical_path(vertical_from, vertical_to), 
+    <span class="edit-toggle">
+      <%= form_for(vertical_to, method: :delete,
+          url: vertical_vertical_path(vertical_from, vertical_to), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Disassociate</button>
+      <% end %>
+      <%= form_for(vertical_to, method: :get,
+        url: edit_vertical_vertical_path(vertical_from, vertical_to),
         html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Disassociate</button>
-    <% end %>
-    <%= form_for(vertical_to, method: :get,
-       url: edit_vertical_vertical_path(vertical_from, vertical_to),
-       html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-    </button>
-    <% end %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+      <% end %>
+    </span>
   <% end %>
 </li>
