--- a/app/views/web_resources/_web_resource_list_item.html.erb
+++ b/app/views/web_resources/_web_resource_list_item.html.erb
@@ -4,19 +4,21 @@
   (<%= link_to "details", web_resource_path(web_resource) %>)
 
   <% if can_edit? and defined? vertical %>
-    <%= form_for(web_resource, method: :delete,
-        url: vertical_web_resource_path(vertical, web_resource), 
+    <span class="edit-toggle">
+      <%= form_for(web_resource, method: :delete,
+          url: vertical_web_resource_path(vertical, web_resource), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          Disassociate</button>
+      <% end %>
+      <%= form_for(web_resource, method: :get,
+        url: edit_vertical_web_resource_path(vertical, web_resource),
         html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Disassociate</button>
-    <% end %>
-    <%= form_for(web_resource, method: :get,
-       url: edit_vertical_web_resource_path(vertical, web_resource),
-       html: {class: "inline"}) do |f| %>
-      <button type="submit" class="btn btn-default btn-sm">
-        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-    </button>
-    <% end %>
+        <button type="submit" class="btn btn-default btn-sm">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+      </button>
+      <% end %>
+    </span>
   <% end %>
 </li>
