Fixed bug with 'add existing' option for examples.

--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -93,24 +93,10 @@
     locals: {title: "Assignments used in", vertical_from: @analysis, 
              vertical_to: Assignment.new}) %>
 
-
-  <div class="examples">
-    <h2>Examples used in</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_vertical_example_path @analysis %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-        <a href="<%= vertical_example_index_path @analysis %>"
-          ><button class="btn btn-sm btn-default">Add existing</button
-        ></a>
-      </span>
-    <% end %>
-
-    <%= render(partial: "examples/example", 
-      collection: sort_by(@analysis.examples, :title), 
-      locals: {print_header: true, vertical: @analysis}) || 
-      "<p>There are currently no examples associated with this analysis.</p>".html_safe %>
-  </div>
+    <%= render(partial: "examples/related_examples",
+      locals: {title: "Examples used in", 
+               vertical: @analysis, 
+               editable: true,
+               title_tag: :h3 }) %>
 
 </div>
