--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -94,23 +94,11 @@
     locals: {title: "Assignments used in", vertical_from: @software, 
              vertical_to: Assignment.new}) %>
 
-  <div class="examples">
-    <h2>Examples used in</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_vertical_example_path @software %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-        <a href="<%= vertical_example_index_path @software %>"
-          ><button class="btn btn-sm btn-default">Add existing</button
-        ></a>
-      </span>
-    <% end %>
 
-    <%= render(partial: "examples/example", 
-      collection: sort_by(@software.examples, :title), 
-      locals: {print_header: true, vertical: @software}) || 
-      "<p>There are currently no examples associated with this software.</p>".html_safe %>
-  </div>
+  <%= render(partial: "examples/related_examples",
+    locals: {title: "Examples used in", 
+              vertical: @software, 
+              editable: true,
+              title_tag: :h3 }) %>
 
 </div>
