Fixing some issue with search indexing.

--- a/app/views/examples/_modify_form.html.erb
+++ b/app/views/examples/_modify_form.html.erb
@@ -23,7 +23,7 @@
 
         <!-- Summary -->
         <div class="form-group">
-          <label>Description</label><span class="required-input">*</span> 
+          <label>Summary</label><span class="required-input">*</span> 
 
           <%= f.text_field :summary,
                 class: "form-control ignore unchanged",
