--- a/app/views/examples/_modify_form.html.erb
+++ b/app/views/examples/_modify_form.html.erb
@@ -32,7 +32,7 @@
 
         <!-- Description -->
         <div class="form-group">
-          <label>Description</label> 
+          <label>Details</label> 
 
           <%= f.bootsy_area :description, rows: 10,
                 class: "form-control ignore unchanged",
