--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -3,7 +3,7 @@
   <h1>Examples</h1>
 
   <% if can_edit? %>
-    <%= link_to(new_software_path) do 
+    <%= link_to(new_example_path) do 
       %><button class="btn btn-sm btn-default">Add Example</button
     ><% end %>
   <% end %>
