--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -46,22 +46,63 @@
             title_tag: :h2 }) %>
 
 
-      <%= render(partial: "verticals_shared/related_vertical",
-        locals: {title: "Related assignments", vertical_from: @example, 
-                 vertical_to: Assignment.new, editable: true}) %>
+      <div class="tags">
+        <h2>Tags</h2>
+        <% if can_edit? %>
+          <span class="edit-toggle">
+            <a href="<%= new_vertical_tag_path @example %>"
+              ><button class="btn btn-sm btn-default">Add new</button
+            ></a>
+            <a href="<%= vertical_tag_index_path @example %>"
+              ><button class="btn btn-sm btn-default">Add existing</button
+            ></a>
+          </span>
+        <% end %>
+        <ul>
+          <%= render(partial: "tags/tag_badge", 
+            collection: sort_by(@example.tags, :text), as: :tag,
+            locals: {print_header: true, vertical: @example}) || 
+            "There are currently no tags associated with this example." %>
+        </ul>
+      </div>
+    
+      <div class="web-resources">
+        <h2>Web resources</h2>
+        <% if can_edit? %>
+          <span class="edit-toggle">
+            <a href="<%= new_vertical_web_resource_path @example %>"
+              ><button class="btn btn-sm btn-default">Add new</button
+            ></a>
+            <a href="<%= vertical_web_resource_index_path @example %>"
+              ><button class="btn btn-sm btn-default">Add existing</button
+            ></a>
+          </span>
+        <% end %>
+        <ul>
+          <%= render(partial: "web_resources/web_resource_list_item", 
+            collection: sort_by(@example.web_resources, :description), 
+            as: :web_resource,
+            locals: {print_header: true, vertical: @example}) || 
+            "There are currently no web resources associated with this example." %>
+        </ul>
+      </div>
 
       <%= render(partial: "verticals_shared/related_vertical",
         locals: {title: "Demonstrates these analyses", vertical_from: @example, 
                  vertical_to: Analysis.new, editable: true}) %>
 
       <%= render(partial: "verticals_shared/related_vertical",
-        locals: {title: "Demonstrates these software", vertical_from: @example, 
+        locals: {title: "Demonstrates the following software", vertical_from: @example, 
                  vertical_to: Software.new, editable: true}) %>
 
       <%= render(partial: "verticals_shared/related_vertical",
         locals: {title: "Uses these datasets", vertical_from: @example, 
                  vertical_to: Dataset.new, editable: true}) %>
      
+
+                 <%= render(partial: "verticals_shared/related_vertical",
+                 locals: {title: "Used in these assignments", vertical_from: @example, 
+                          vertical_to: Assignment.new, editable: false}) %>
     </div>
   </div>
 </div>
