added semi-working delete function, needs testing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,6 +48,10 @@
                 <li><%= link_to "Add software", new_software_path %></li>
                 <li><%= link_to "Add a dataset", new_dataset_path %></li>
                 <li><%= link_to "Add an example", new_example_path %></li>
+				<li class="divider"></li>
+				<li>
+                  <%= link_to "Delete account", delete_path, method: "delete" %>
+                </li>
                 <% if current_user.is_admin? %>
                   <li class="divider"></li>
                   <li><%= link_to "Administer users", users_path %></li>
