--- a/app/views/assignments/_modify_form.html.erb
+++ b/app/views/assignments/_modify_form.html.erb
@@ -27,14 +27,14 @@
 
       <div class="form-group">
         <%= f.label :summary %><span class="required-input">*</span><br/>
-        This should be a short, one sentence overview of the assignment.
+        This should be a short, one sentence overview of the assignment. This will appear in the assignments listing and search results.
         <%= f.text_area :summary, class: "form-control",
           placeholder: "e.g., Represent data as a set of nodes and connections, then calculate network metrics over the data." %>
       </div>
 
       <div class="form-group">
         <%= f.label :description %><br/>
-        This should be a detailed description of the assignment and how to use it.
+        This should be a general overview of the assignment and how it integrates with other course material and learning objectives. This should not contain the assignment itself (please upload assignment handouts on the next screen).
         <%= f.bootsy_area :description,  
           rows: 10, class: "form-control add-to-vertical unchanged",
           editor_options: bootsy_editing_options %>
@@ -42,7 +42,7 @@
 
       <div class="form-group">
         <%= f.label :learning_curve %><br/>
-        High, medium, low, or something more descriptive.
+        Expected learning curve (high, medium, low, or something more descriptive).
         <%= f.text_field :learning_curve, class: "form-control", 
           placeholder: "e.g., medium" %>
       </div>
@@ -55,7 +55,7 @@
       </div>
 
       <p>
-      You will have an opportunity to add resource links and examples after you
+      You will have an opportunity to add attachments, resource links, and examples after you
       save.
       </p>
 
