--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,16 +13,13 @@
       </button>
 
       <div id="logo" class="navbar-brand">
-        <%= link_to "Alice", root_path %>
-        <span class="version">v<%= VERSION_STRING %></span>
+        <span class="h3"><%= link_to "Alice", root_path %></span>
       </div>
     </div>
 
     <!-- Navigation buttons -->
 
     <div id="navbar" class="navbar-collapse collapse collapse-wrapper">
-
-
 
       <div class="navbar-right">
         <ul class="nav navbar-nav">
