--- a/app/views/shared/_login_form.html.erb
+++ b/app/views/shared/_login_form.html.erb
@@ -8,18 +8,20 @@
       <%= f.label :username %>
       <%= f.text_field :username, class: 'form-control' %>
 
-      <%= f.label :password %>
+      <%= f.label :password, class: "my-5" %>
       <%= link_to "(forgot password)", new_password_reset_path %>
       <%= f.password_field :password, class: 'form-control' %>
-
-      <%= f.label :remember_me, class: "checkbox inline" do %>
-        <%= f.check_box :remember_me %>
-        <span>Remember me on this computer</span>
+	<div class="col-md-12">
+      <%= f.label :remember_me, class: 'checkbox inline' do %>
+      <%= f.check_box :remember_me %>
+	  <span>Remember me on this computer</span>
+	</div>
+        
       <% end %>
-
-      <%= f.submit "Log in", class: "btn btn-primary" %>
+	  <%= f.submit "Log in", class: "btn btn-primary" %>
+	  <span>New user? <%= link_to "Sign up now!", signup_path %></span>
     <% end %>
 
-    <p>New user? <%= link_to "Sign up now!", signup_path %></p>
+    
   </div>
 </div>
