--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -50,7 +50,7 @@
                 <li><%= link_to "Add an example", new_example_path %></li>
 				<li class="divider"></li>
 				<li>
-                  <%= link_to "Delete account", delete_path, method: "delete" %>
+                  <%= link_to "Delete account", user_path(current_user), method: "delete" %>
                 </li>
                 <% if current_user.is_admin? %>
                   <li class="divider"></li>
