Updated assignments page

--- a/app/views/assignment_results/_assignment_result_list_item.html.erb
+++ b/app/views/assignment_results/_assignment_result_list_item.html.erb
@@ -1,4 +1,4 @@
-<li class="resource">
+<div class="resource">
   <span class="name"><%=
     "#{assignment_result.course_title} (#{assignment_result.instructor}, #{assignment_result.semester})"
   %></span>
