--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -5,7 +5,7 @@
 
   <% if can_edit? %>
     <%= link_to(new_assignment_path) do 
-      %><button class="btn btn-sm btn-default">Add an assignment</button
+      %><button class="btn btn-sm btn-default">+ New Assignment</button
     ><% end %>
   <% end %>
 
