--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -1,137 +1,153 @@
 <% provide(:title, @assignment.name) %>
-<div class="container assignment-page" data-assignment-id="<%= @assignment.id %>">
-  <h1><span class="name"><%= @assignment.name %></span>
+<div class="container-fluid assignment-page" data-assignment-id="<%= @assignment.id %>">
+  
+  <h1 class="name"><%= @assignment.name %>
   <% if can_edit? %>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
-      Enable editing
-    </button>
-    <button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
-      Disable editing
-    </button>
+	<button type="button" class="btn btn-primary btn-sm edit-toggle enable-editing">
+	  Enable editing
+	</button>
+	<button type="button" class="btn btn-primary btn-sm edit-toggle disable-editing">
+	  Disable editing
+	</button>
 
-    <span class="edit-toggle">
-      <%= link_to edit_assignment_path(@assignment.id)  do  
-        %><button type="button" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-        </button
-      ><% end %>
-      <%= link_to @assignment, method: :delete, data: {
-          confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Delete </button
-      ><% end %>
-    </span>
+	<span class="edit-toggle">
+	  <%= link_to edit_assignment_path(@assignment.id)  do  
+		%><button type="button" class="btn btn-default btn-sm">
+		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+		</button
+	  ><% end %>
+	  <%= link_to @assignment, method: :delete, data: {
+		  confirm: "Are you sure you want to delete this page?"} do  
+		%><button type="button" class="btn btn-default btn-sm">
+		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+		Delete </button
+	  ><% end %>
+	</span>
   <% end %>
   </h1>
-
-  <div class="metadata-wrapper">
-    <!-- <h2>Metadata</h2> -->
-    <table class="metadata">
-      <tr>
-        <th>Author</th>
-        <td class="author"><%= @assignment.author %></td>
-      </tr>
-      <tr>
-        <th>Learning curve</th>
-        <td class="learning_curve"><%= @assignment.learning_curve %></td>
-      </tr>
-      <tr>
-        <th>Expected instruction hours</th>
-        <td class="instruction_hours"><%= @assignment.instruction_hours %></td>
-      </tr>
-      <tr>
-        <th>Tags</th>
-        <td class="tags">
-          
-          <% if can_edit? %>
-            <span class="edit-toggle">
-              <a href="<%= new_vertical_tag_path @assignment %>"
-                ><button class="btn btn-sm btn-default">Add new</button
-              ></a>
-              <a href="<%= vertical_tag_index_path @assignment %>"
-                ><button class="btn btn-sm btn-default">Add existing</button
-              ></a>
-            </span>
-          <% end %>
-          <%= render(partial: "tags/tag_badge", 
-            collection: sort_by(@assignment.tags, :text), as: :tag,
-            locals: {print_header: true, vertical: @assignment}) || 
-            "There are currently no tags associated with this assignment." %>
-        </td>
-      </tr>
-    </table>
-  </div>
-  
-  <div class="summary-wrapper">
-    <h2>Summary</h2>
-    <span class="summary"><%= @assignment.summary %></span>
-  </div>
-
-  <div class="description-wrapper">
-    <h2>Description</h2>
-    <div class="description">
-          <%= sanitize_text(@assignment.description).html_safe %>
-    </div>
-  
-
-
-  </div>
-
-    
-  <%= render(partial: "attachments/attachment_list",
-  locals: { 
-     vertical_from: @assignment, 
-     data: @assignment.attachments,
-     editable: true,
-     title_tag: :h2 }) %>
-
-
-  <div class="web-resources">
-    <h2>Web resources</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_vertical_web_resource_path @assignment %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-        <a href="<%= vertical_web_resource_index_path @assignment %>"
-          ><button class="btn btn-sm btn-default">Add existing</button
-        ></a>
-      </span>
-    <% end %>
-    <ul>
-      <%= render(partial: "web_resources/web_resource_list_item", 
-        collection: sort_by(@assignment.web_resources, :description), 
-        as: :web_resource, 
-        locals: {print_header: true, vertical: @assignment}) || 
-        "There are currently no web resources associated with this assignment." %>
-    </ul>
+  <div class="tags">
+	  <% if can_edit? %>
+		<span class="edit-toggle">
+		  <a href="<%= new_vertical_tag_path @assignment %>"
+			><button class="btn btn-sm btn-default">Add new</button
+		  ></a>
+		  <a href="<%= vertical_tag_index_path @assignment %>"
+			><button class="btn btn-sm btn-default">Add existing</button
+		  ></a>
+		</span>
+	  <% end %>
+	  <%= render(partial: "tags/tag_badge", 
+		collection: sort_by(@assignment.tags, :text), as: :tag,
+		locals: {print_header: true, vertical: @assignment}) || 
+		"There are currently no tags associated with this assignment." %>
+	</div>
+  <div class="row">
+    <div class="col-sm-7">
+	  <div class="row">
+	    <div class="col-sm-12 summary-wrapper">
+          <span class="summary"><%= @assignment.summary %></span>
+	    </div>
+	  </div>
+	  <div class="row">
+		  <div class="col-sm-12 description-wrapper">
+			<h2>Overview</h2>
+			<div class="description">
+				  <%= sanitize_text(@assignment.description).html_safe %>
+			</div>
+		  </div>
+	  </div>
+	</div>
+	<div class="col-sm-5">
+	  <div class="metadata-wrapper">
+		<!-- <h2>Metadata</h2> -->
+		<div class="metadata">
+		  <div class="row">
+			<div class="col">
+			  <b>Author: </b><span class="author"><%= @assignment.author %></span>
+			</div>
+		  </div>
+		  <div class="row">
+			<div class="col">
+			  <b>Learning curve: </b><span class="learning_curve"><%= @assignment.learning_curve %></span>
+			</div>
+		  </div>
+		  <div class="row">
+			<div class="col">
+			  <b>Expected instruction hours: </b><span class="instruction_hours"><%= @assignment.instruction_hours %></span>
+			</div>
+		  </div>
+		  <div class="row">
+			<div class="col">
+			  <b>Courses used in: </b><span>[implement this?]</span>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	</div>
   </div>
 
-
-  <div class="assignment-results">
-   <h2>Results</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_assignment_assignment_result_path @assignment %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-      </span>
-    <% end %>
-    <ul>
-      <%= render(partial: "assignment_results/assignment_result_list_item", 
-        collection: sort_by(@assignment.assignment_results, :semester), 
-        as: :assignment_result, 
-        locals: {print_header: true, assignment: @assignment}) || 
-        "There are currently no results for this assignment." %>
-    </ul>
+  <hr>
+  <h2 class="m-1">Materials</h2>
+   
+   <div class="row">
+	  <div class="col-sm-4">
+	    <%= render(partial: "attachments/attachment_list",
+	    locals: { 
+		 vertical_from: @assignment, 
+		 data: @assignment.attachments,
+		 editable: true,
+		 title_tag: :h3 }) %>
+	  </div>
+	  <div class="col-sm-4">
+		<div class="web-resources">
+		<h3>From the web</h3>
+		<% if can_edit? %>
+		  <span class="edit-toggle">
+			<a href="<%= new_vertical_web_resource_path @assignment %>"
+			  ><button class="btn btn-sm btn-default">Add new</button
+			></a>
+			<a href="<%= vertical_web_resource_index_path @assignment %>"
+			  ><button class="btn btn-sm btn-default">Add existing</button
+			></a>
+		  </span>
+		<% end %>
+		<ul>
+		  <%= render(partial: "web_resources/web_resource_list_item", 
+			collection: sort_by(@assignment.web_resources, :description), 
+			as: :web_resource, 
+			locals: {print_header: true, vertical: @assignment}) || 
+			"There are currently no web resources associated with this assignment." %>
+		</ul>
+	  </div>
   </div>
-
-
+    <div class="col-sm-4">
+	<div class="assignment-results">
+	   <h3>Results</h3>
+		<% if can_edit? %>
+		  <span class="edit-toggle">
+			<a href="<%= new_assignment_assignment_result_path @assignment %>"
+			  ><button class="btn btn-sm btn-default">Add new</button
+			></a>
+		  </span>
+		<% end %>
+		<ul>
+		  <%= render(partial: "assignment_results/assignment_result_list_item", 
+			collection: sort_by(@assignment.assignment_results, :semester), 
+			as: :assignment_result, 
+			locals: {print_header: true, assignment: @assignment}) || 
+			"There are currently no results for this assignment." %>
+		</ul>
+	  </div>
+  </div>
+</div>
+   
+   
+  <hr>
   <div class="related-resources">
-    <h2>Related</h2>
-    
-    <%= render(partial: "verticals_shared/related_vertical",
+    <h2 class="m-1">Related</h2>
+    <div class="row">
+     <div class="col-sm-4">
+		<%= render(partial: "verticals_shared/related_vertical",
       locals: {title: "Other assignments", 
                vertical_from: @assignment, 
                vertical_to: Assignment.new, 
@@ -141,36 +157,42 @@
 
 <!--     <button class="expand-all-resources">Expand all</button>
     <button class="collapse-all-resources">Collapse all</button> -->
-
-    <%= render(partial: "verticals_shared/related_vertical",
+	 </div>
+	 <div class="col-sm-4">
+		<%= render(partial: "verticals_shared/related_vertical",
       locals: {title: "Software", 
                vertical_from: @assignment, 
                vertical_to: Software.new, 
                editable: true,
                title_tag: :h3  }) %>
-
-
-    <%= render(partial: "verticals_shared/related_vertical",
+	 </div>
+	 <div class="col-sm-4">
+		<%= render(partial: "verticals_shared/related_vertical",
       locals: {title: "Analyses", 
                vertical_from: @assignment, 
                vertical_to: Analysis.new, 
                editable: true,
                title_tag: :h3  }) %>
-
-
-    <%= render(partial: "verticals_shared/related_vertical",
+	 </div>
+   </div>
+   
+   <div class="row">
+     <div class="col-sm-4">
+		<%= render(partial: "verticals_shared/related_vertical",
       locals: {title: "Datasets", 
                vertical_from: @assignment, 
                vertical_to: Dataset.new, 
                editable: true,
                title_tag: :h3 }) %>
-
-    <%= render(partial: "examples/related_examples",
+	 </div>
+	 <div class="col-sm-4">
+		<%= render(partial: "examples/related_examples",
       locals: {title: "Examples", 
                vertical: @assignment, 
                editable: true,
                title_tag: :h3 }) %>
-
+	 </div>
+   </div>
   </div>
 
 
