--- a/app/views/attachments/_new.html.erb
+++ b/app/views/attachments/_new.html.erb
@@ -9,17 +9,19 @@ This is expecting the following local variables:
   <h3>Upload a new attachment</h3>
   <%= form_for Attachment.new, url: vertical_attachments_path(vertical), 
         html: { multipart: true } do |f| %>
-    <table>
-      <tr>
-        <td>
+    <div>
+      <div>
+        <div>
           <%= f.file_field :file_attachment, id: "upload-attachment-field", class: "submit-toggle-field" %>
-          </td><td>
+        </div>
+		<div>
           Brief description: <%= f.text_field :description %>
-        </td><td>
+        </div>
+		<div>
           <%= f.submit "Upload", 
             id: "upload-attachment-submit", class: "btn btn-sm btn-primary", disabled: "disabled" %>
-        </td>
-      </tr>
-    </table>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
