--- a/app/views/examples/_related_examples.html.erb
+++ b/app/views/examples/_related_examples.html.erb
@@ -14,18 +14,20 @@ This is expecting the following local variables:
 <% end %>
 
 <div class="examples related">
-  <<%=title_tag%>><%= title %></<%=title_tag%>>
+  <<%=title_tag%>><%= title %>
   <% if editable and can_edit? %>
     <span class="edit-toggle">
       <a href="<%= new_vertical_example_path vertical %>"
-        ><button class="btn btn-sm btn-default">Add new</button
+        ><button class="btn btn-sm btn-light" data-toggle="tooltip" title="New Example"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button
       ></a>
+	  <!-- MERGE THESE TWO PAGES
       <a href="<%= vertical_example_index_path vertical %>"
         ><button class="btn btn-sm btn-default">Add existing</button
       ></a>
     </span>
+	-->
   <% end %>
-
+  </<%=title_tag%>>
   <ul>
     <%= render(partial: "examples/example_list_item", 
       collection: sort_by(vertical.examples, :title), 
