--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,14 +1,17 @@
 <% provide(:title, "Analyses") %>
 <div class="container">
 
-  <h1>Analysis</h1>
+  <h1>Analysis
 
   <% if can_edit? %>
     <%= link_to(new_analysis_path) do 
-      %><button class="btn btn-sm btn-default">Add an analysis</button
-    ><% end %>
+      %>
+	  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New Analysis">
+		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+	  </button>
+    <% end %>
   <% end %>
-
+  </h1>
   <div id="analysis-entries" class="entries">
     <%= render @analyses %>
   </div>
