--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -12,15 +12,15 @@
 
 	<span class="edit-toggle">
 	  <%= link_to edit_assignment_path(@assignment.id)  do  
-		%><button type="button" class="btn btn-default btn-sm">
-		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+		%><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Assignment">
+		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		</button
 	  ><% end %>
 	  <%= link_to @assignment, method: :delete, data: {
 		  confirm: "Are you sure you want to delete this page?"} do  
-		%><button type="button" class="btn btn-default btn-sm">
+		%><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Assignment">
 		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-		Delete </button
+		</button
 	  ><% end %>
 	</span>
   <% end %>
@@ -28,14 +28,19 @@
   <div class="tags">
 	  <% if can_edit? %>
 		<span class="edit-toggle">
-		  <a href="<%= new_vertical_tag_path @assignment %>"
-			><button class="btn btn-sm btn-default">Add new</button
-		  ></a>
+		  <a href="<%= new_vertical_tag_path @assignment %>">
+			<button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+			  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+			</button>
+		  </a>
+		  <!-- MERGE THIS PAGE INTO THE FIRST ONE
 		  <a href="<%= vertical_tag_index_path @assignment %>"
 			><button class="btn btn-sm btn-default">Add existing</button
 		  ></a>
+		  -->
 		</span>
 	  <% end %>
+	  Tags:
 	  <%= render(partial: "tags/tag_badge", 
 		collection: sort_by(@assignment.tags, :text), as: :tag,
 		locals: {print_header: true, vertical: @assignment}) || 
@@ -100,17 +105,22 @@
 	  </div>
 	  <div class="col-sm-4">
 		<div class="web-resources">
-		<h3>From the web</h3>
-		<% if can_edit? %>
-		  <span class="edit-toggle">
-			<a href="<%= new_vertical_web_resource_path @assignment %>"
-			  ><button class="btn btn-sm btn-default">Add new</button
-			></a>
-			<a href="<%= vertical_web_resource_index_path @assignment %>"
-			  ><button class="btn btn-sm btn-default">Add existing</button
-			></a>
-		  </span>
-		<% end %>
+		<h3>From the web
+		  <% if can_edit? %>
+		    <span class="edit-toggle">
+			  <a href="<%= new_vertical_web_resource_path @assignment %>">
+			    <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+				  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+				</button>
+			  </a>
+			  <!-- MERGE THESE PAGES
+			  <a href="<%= vertical_web_resource_index_path @assignment %>"
+			    ><button class="btn btn-sm btn-default">Add existing</button
+			  ></a>
+			  -->
+		    </span>
+		  <% end %>
+		</h3>
 		<ul>
 		  <%= render(partial: "web_resources/web_resource_list_item", 
 			collection: sort_by(@assignment.web_resources, :description), 
@@ -119,17 +129,20 @@
 			"There are currently no web resources associated with this assignment." %>
 		</ul>
 	  </div>
-  </div>
+	 </div>
     <div class="col-sm-4">
-	<div class="assignment-results">
-	   <h3>Results</h3>
-		<% if can_edit? %>
-		  <span class="edit-toggle">
-			<a href="<%= new_assignment_assignment_result_path @assignment %>"
-			  ><button class="btn btn-sm btn-default">Add new</button
-			></a>
-		  </span>
-		<% end %>
+	  <div class="assignment-results">
+	   <h3>Results
+			<% if can_edit? %>
+			  <span class="edit-toggle">
+				<a href="<%= new_assignment_assignment_result_path @assignment %>">
+				  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New result">
+				    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+				  </button>
+				</a>
+			  </span>
+			<% end %>
+		</h3>
 		<ul>
 		  <%= render(partial: "assignment_results/assignment_result_list_item", 
 			collection: sort_by(@assignment.assignment_results, :semester), 
@@ -160,17 +173,17 @@
 	 </div>
 	 <div class="col-sm-4">
 		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Software", 
+      locals: {title: "Analyses", 
                vertical_from: @assignment, 
-               vertical_to: Software.new, 
+               vertical_to: Analysis.new, 
                editable: true,
                title_tag: :h3  }) %>
 	 </div>
 	 <div class="col-sm-4">
 		<%= render(partial: "verticals_shared/related_vertical",
-      locals: {title: "Analyses", 
+      locals: {title: "Software", 
                vertical_from: @assignment, 
-               vertical_to: Analysis.new, 
+               vertical_to: Software.new, 
                editable: true,
                title_tag: :h3  }) %>
 	 </div>
@@ -199,3 +212,4 @@
 
   </div>
 </div>
+
