--- a/app/views/verticals_shared/_vertical_list_item.html.erb
+++ b/app/views/verticals_shared/_vertical_list_item.html.erb
@@ -5,21 +5,21 @@
     &ndash; <%= get_snippet(vertical_to.summary, 200)%>
   </span>
   <% if can_edit? and editable and defined? vertical_from %>
-    <span class="edit-toggle">
-      <%= form_for(vertical_to, method: :delete,
-          url: vertical_vertical_path(vertical_from, vertical_to), 
-          html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-          Disassociate</button>
-      <% end %>
+    <div class="edit-toggle">
       <%= form_for(vertical_to, method: :get,
         url: edit_vertical_vertical_path(vertical_from, vertical_to),
         html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        <button type="submit" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
       </button>
       <% end %>
-    </span>
+	  <%= form_for(vertical_to, method: :delete,
+          url: vertical_vertical_path(vertical_from, vertical_to), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-light btn-sm" data-toggle="tooltip" title="Disassociate">
+          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        </button>
+      <% end %>
+    </div>
   <% end %>
 </li>
