updated the other two (unfinished)

--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Assignments") %>
 <div class="container">
 
-  <h1>Assignment
+  <h1>Assignments
 
   <% if can_edit? %>
     <%= link_to(new_assignment_path) do 
