--- a/app/views/analyses/index.html.erb
+++ b/app/views/analyses/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Analyses") %>
 <div class="container">
 
-  <h1>Analysis
+  <h1>Analyses
 
   <% if can_edit? %>
     <%= link_to(new_analysis_path) do 
