--- a/app/views/datasets/index.html.erb
+++ b/app/views/datasets/index.html.erb
@@ -1,14 +1,16 @@
 <% provide(:title, "Datasets") %>
 <div class="container">
 
-  <h1>Dataset</h1>
+  <h1>Datasets
 
   <% if can_edit? %>
     <%= link_to(new_dataset_path) do 
-      %><button class="btn btn-sm btn-default">Add a dataset</button
-    ><% end %>
+      %><button class="btn btn-sm btn-light" data-toggle="tooltip" title="New Dataset">
+		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+	  </button>
+    <% end %>
   <% end %>
-
+  </h1>
   <div id="dataset-entries" class="entries">
     <%= render @datasets %>
   </div>
