--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -11,88 +11,113 @@
 
     <span class="edit-toggle">
       <%= link_to edit_dataset_path(@dataset.id)  do  
-        %><button type="button" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-        </button
-      ><% end %>
+        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Dataset">
+		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+		</button>
+      <% end %>
       <%= link_to @dataset, method: :delete, data: {
           confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-        Delete </button
-      ><% end %>
+        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Dataset">
+		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+		</button>
+      <% end %>
     </span>
   <% end %>
   </h1>
 
+  <div class="tags">
+    <% if can_edit? %>
+      <span class="edit-toggle">
+        <a href="<%= new_vertical_tag_path @dataset %>">
+          <button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+		  </button>
+        </a>
+		<!-- MERGE THESE TWO
+        <a href="<%= vertical_tag_index_path @dataset %>"
+          ><button class="btn btn-sm btn-default">Add existing</button
+        ></a>
+		-->
+      </span>
+    <% end %>
+	Tags:
+    
+      <%= render(partial: "tags/tag_badge", 
+        collection: sort_by(@dataset.tags, :text), as: :tag,
+        locals: {print_header: true, vertical: @dataset}) || 
+        "There are currently no tags associated with this dataset." %>
+    
+  </div>
+  
   <div class="summary-wrapper">
     <h2>Summary</h2>
     <span class="summary"><%= @dataset.summary %></span>
   </div>
 
   <div class="description-wrapper">
-    <h2>Description</h2>
+    <h2>Overview</h2>
     <div class="description">
           <%= sanitize_text(@dataset.description).html_safe %>
     </div>
   </div>
-
-  <%= render(partial: "attachments/attachment_list",
-      locals: { 
+  
+  <hr>
+  <h2 class="m-1">Materials</h2>
+  <div class="row">
+	<div class="col-sm-4">
+	    <%= render(partial: "attachments/attachment_list",
+		locals: { 
         vertical_from: @dataset, 
         data: @dataset.attachments,
         editable: true,
-        title_tag: :h2 }) %>
-
-  <div class="tags">
-    <h2>Tags</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_vertical_tag_path @dataset %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-        <a href="<%= vertical_tag_index_path @dataset %>"
-          ><button class="btn btn-sm btn-default">Add existing</button
-        ></a>
-      </span>
-    <% end %>
-    <ul>
-      <%= render(partial: "tags/tag_badge", 
-        collection: sort_by(@dataset.tags, :text), as: :tag,
-        locals: {print_header: true, vertical: @dataset}) || 
-        "There are currently no tags associated with this dataset." %>
-    </ul>
+        title_tag: :h3 }) %>
+	</div>
+	<div class="col-sm-4">
+	    <div class="web-resources">
+		<h3>From the web
+		<% if can_edit? %>
+		  <span class="edit-toggle">
+			<a href="<%= new_vertical_web_resource_path @dataset %>">
+			  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+			  </button>
+			  </a>
+			<!-- MERGE ^^
+			<a href="<%= vertical_web_resource_index_path @dataset %>"
+			  ><button class="btn btn-sm btn-default">Add existing</button
+			></a>
+			-->
+		  </span>
+		<% end %>
+		</h3>
+		<ul>
+		  <%= render(partial: "web_resources/web_resource_list_item", 
+			collection: sort_by(@dataset.web_resources, :title), as: :web_resource,
+			locals: {print_header: true, vertical: @dataset}) || 
+			"There are currently no web resources associated with this dataset." %>
+		</ul>
+	  </div>
+	</div>
+	<div class="col-sm-4">
+	</div>
   </div>
-
-  <div class="web-resources">
-    <h2>Web resources</h2>
-    <% if can_edit? %>
-      <span class="edit-toggle">
-        <a href="<%= new_vertical_web_resource_path @dataset %>"
-          ><button class="btn btn-sm btn-default">Add new</button
-        ></a>
-        <a href="<%= vertical_web_resource_index_path @dataset %>"
-          ><button class="btn btn-sm btn-default">Add existing</button
-        ></a>
-      </span>
-    <% end %>
-    <ul>
-      <%= render(partial: "web_resources/web_resource_list_item", 
-        collection: sort_by(@dataset.web_resources, :title), as: :web_resource,
-        locals: {print_header: true, vertical: @dataset}) || 
-        "There are currently no web resources associated with this dataset." %>
-    </ul>
-  </div>
-
-  <%= render(partial: "verticals_shared/related_vertical",
-    locals: {title: "Assignments", vertical_from: @dataset, 
+  
+  <hr>
+  <h2 class="m-1">Used In</h2>
+  <div class="row">
+	<div class="col-sm-4">
+	  <%= render(partial: "verticals_shared/related_vertical",
+			locals: {title: "Assignments", vertical_from: @dataset, 
              vertical_to: Assignment.new}) %>
-
-
-    <%= render(partial: "examples/related_examples",
-      locals: {title: "Examples used in", 
+	</div>
+	<div class="col-sm-4">
+	      <%= render(partial: "examples/related_examples",
+			   locals: {title: "Examples", 
                vertical: @dataset, 
                editable: true,
-               title_tag: :h2 }) %>
-
+               title_tag: :h3 }) %>
+	</div>
+	<div class="col-sm-4">
+	</div>
+  </div>
 </div>
