--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -11,16 +11,16 @@
 
     <span class="edit-toggle">
       <%= link_to edit_software_path(@software.id)  do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Assignment">
+        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Software">
 		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-		</button
-      ><% end %>
+		</button>
+      <% end %>
       <%= link_to @software, method: :delete, data: {
           confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Assignment">
+        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Software">
 		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-		</button
-      ><% end %>
+		</button>
+      <% end %>
     </span>
   <% end %>
   </h1>
