changed buttons to icons

--- a/app/assets/stylesheets/00-general.scss
+++ b/app/assets/stylesheets/00-general.scss
@@ -83,3 +83,18 @@ h3 {
 .selected-vertical {
   border-bottom: 2px solid steelblue;
 }
+
+/* Verticals */
+
+.vertical-li {
+	list-style-type: none;
+	margin: 1em 0;
+}
+
+.btn-link {
+	padding: .1em;
+}
+
+.x-btn {
+	color: #cc3300 !important;
+}
