--- a/app/views/tags/_tag_badge.html.erb
+++ b/app/views/tags/_tag_badge.html.erb
@@ -9,7 +9,7 @@
       ><% end %>
       
       <%= link_to(vertical_tag_path(vertical, tag), method: :delete, class: :delete) do 
-        %><span class="glyphicon glyphicon-trash" aria-hidden="true"></span
+        %><span class="glyphicon glyphicon-remove" aria-hidden="true"></span
       ><% end %>
     </span>
   <% end %>
