--- a/app/views/analyses/show.html.erb
+++ b/app/views/analyses/show.html.erb
@@ -10,14 +10,14 @@
     </button>
     <span class="edit-toggle">
       <%= link_to edit_analysis_path(@analysis.id)  do 
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Analysis">
+        %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Analysis">
           <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button
       ><% end %>
       <%= link_to @analysis, method: :delete, data: {
           confirm: "Are you sure you want to delete this page?"} do 
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Analysis">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Analysis">
+          <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
         </button
       ><% end %>
     </span>
@@ -27,7 +27,7 @@
     <% if can_edit? %>
       <span class="edit-toggle">
         <a href="<%= new_vertical_tag_path @analysis %>"
-          ><button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+          ><button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
 			  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 			</button>
         </a>
@@ -73,7 +73,7 @@
 		<% if can_edit? %>
 		  <span class="edit-toggle">
 			<a href="<%= new_vertical_web_resource_path @analysis %>">
-			  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+			  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
 				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			  </button>
 			</a>
