--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -12,14 +12,14 @@
 
 	<span class="edit-toggle">
 	  <%= link_to edit_assignment_path(@assignment.id)  do  
-		%><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Assignment">
+		%><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Assignment">
 		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		</button
 	  ><% end %>
 	  <%= link_to @assignment, method: :delete, data: {
 		  confirm: "Are you sure you want to delete this page?"} do  
-		%><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Assignment">
-		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+		%><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Assignment">
+		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 		</button
 	  ><% end %>
 	</span>
@@ -29,7 +29,7 @@
 	  <% if can_edit? %>
 		<span class="edit-toggle">
 		  <a href="<%= new_vertical_tag_path @assignment %>">
-			<button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
 			  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 			</button>
 		  </a>
@@ -47,7 +47,7 @@
 		"There are currently no tags associated with this assignment." %>
 	</div>
   <div class="row">
-    <div class="col-sm-7">
+    <div class="col-sm-9">
 	  <div class="row">
 	    <div class="col-sm-12 summary-wrapper">
           <span class="summary"><%= @assignment.summary %></span>
@@ -62,7 +62,7 @@
 		  </div>
 	  </div>
 	</div>
-	<div class="col-sm-5">
+	<div class="col-sm-3">
 	  <div class="metadata-wrapper">
 		<!-- <h2>Metadata</h2> -->
 		<div class="metadata">
@@ -109,7 +109,7 @@
 		  <% if can_edit? %>
 		    <span class="edit-toggle">
 			  <a href="<%= new_vertical_web_resource_path @assignment %>">
-			    <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+			    <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
 				  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 				</button>
 			  </a>
@@ -136,7 +136,7 @@
 			<% if can_edit? %>
 			  <span class="edit-toggle">
 				<a href="<%= new_assignment_assignment_result_path @assignment %>">
-				  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New result">
+				  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New result">
 				    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 				  </button>
 				</a>
