--- a/app/views/datasets/show.html.erb
+++ b/app/views/datasets/show.html.erb
@@ -11,14 +11,14 @@
 
     <span class="edit-toggle">
       <%= link_to edit_dataset_path(@dataset.id)  do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Dataset">
+        %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Dataset">
 		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		</button>
       <% end %>
       <%= link_to @dataset, method: :delete, data: {
           confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Dataset">
-		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Dataset">
+		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 		</button>
       <% end %>
     </span>
@@ -29,7 +29,7 @@
     <% if can_edit? %>
       <span class="edit-toggle">
         <a href="<%= new_vertical_tag_path @dataset %>">
-          <button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+          <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
 		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		  </button>
         </a>
@@ -78,7 +78,7 @@
 		<% if can_edit? %>
 		  <span class="edit-toggle">
 			<a href="<%= new_vertical_web_resource_path @dataset %>">
-			  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+			  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
 				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			  </button>
 			  </a>
@@ -107,7 +107,7 @@
   <div class="row">
 	<div class="col-sm-4">
 	  <%= render(partial: "verticals_shared/related_vertical",
-			locals: {title: "Assignments", vertical_from: @dataset, 
+			locals: {title: "Assignments", vertical_from: @dataset, editable: true,
              vertical_to: Assignment.new}) %>
 	</div>
 	<div class="col-sm-4">
