--- a/app/views/examples/_related_examples.html.erb
+++ b/app/views/examples/_related_examples.html.erb
@@ -18,7 +18,7 @@ This is expecting the following local variables:
   <% if editable and can_edit? %>
     <span class="edit-toggle">
       <a href="<%= new_vertical_example_path vertical %>"
-        ><button class="btn btn-sm btn-light" data-toggle="tooltip" title="New Example"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button
+        ><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Example"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button
       ></a>
 	  <!-- MERGE THESE TWO PAGES
       <a href="<%= vertical_example_index_path vertical %>"
