--- a/app/views/examples/index.html.erb
+++ b/app/views/examples/index.html.erb
@@ -4,7 +4,7 @@
 
   <% if can_edit? %>
     <%= link_to(new_example_path) do 
-      %><button class="btn btn-sm btn-light" data-toggle="tooltip" title="New Dataset">
+      %><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New Example">
 		  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 	  </button>
 	  <% end %>
