--- a/app/views/examples/show.html.erb
+++ b/app/views/examples/show.html.erb
@@ -11,14 +11,14 @@
 
       <span class="edit-toggle">
         <%= link_to edit_example_path(@example)  do %>
-          <button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Example">
+          <button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Example">
 		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		  </button>
         <% end %>
         <%= link_to @example, method: :delete, data: {
             confirm: "Are you sure you want to delete this page?"} do  
-          %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Example">
-			  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+          %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete Example">
+			  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 			</button>
 		<% end %>
       </span>
@@ -29,7 +29,7 @@
 	<% if can_edit? %>
 	  <span class="edit-toggle">
 		<a href="<%= new_vertical_tag_path @example %>"
-		  ><button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+		  ><button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
 		<span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 	  </button>
 	</a>
@@ -75,7 +75,7 @@
         <% if can_edit? %>
           <span class="edit-toggle">
             <a href="<%= new_vertical_web_resource_path @example %>"
-              ><button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+              ><button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
 				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			  </button></a>
 			<!-- MERGE ^^
@@ -112,9 +112,10 @@
 	<div class="col-sm-4">
 	  <%= render(partial: "verticals_shared/related_vertical",
                  locals: {title: "Assignments", vertical_from: @example, 
-                          vertical_to: Assignment.new, editable: false}) %>
+                          vertical_to: Assignment.new, editable:true}) %>
 	</div>
   </div>
+  <hr>
   <h2 class="m-1">Uses</h2>
   <div class="row">
 	<div class="col-sm-4">
