--- a/app/views/software/show.html.erb
+++ b/app/views/software/show.html.erb
@@ -11,14 +11,14 @@
 
     <span class="edit-toggle">
       <%= link_to edit_software_path(@software.id)  do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Edit Software">
+        %><button type="button" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit Software">
 		  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		</button>
       <% end %>
       <%= link_to @software, method: :delete, data: {
           confirm: "Are you sure you want to delete this page?"} do  
-        %><button type="button" class="btn btn-light btn-sm" data-toggle="tooltip" title="Delete Software">
-		  <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
+        %><button type="button" class="btn btn-link btn-sm x-btn" data-toggle="tooltip" title="Delete Software">
+		  <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
 		</button>
       <% end %>
     </span>
@@ -29,7 +29,7 @@
     <% if can_edit? %>
       <span class="edit-toggle">
         <a href="<%= new_vertical_tag_path @software %>">
-          <button class="btn btn-sm btn-light" data-toggle="tooltip" title="Edit Tags">
+          <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
 		    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
 		  </button>
         </a>
@@ -75,7 +75,7 @@
 		<% if can_edit? %>
 		  <span class="edit-toggle">
 			<a href="<%= new_vertical_web_resource_path @software %>">
-			  <button class="btn btn-sm btn-light" data-toggle="tooltip" title="New web resource">
+			  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="New web resource">
 				<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			  </button>
 			</a>
