fixed small errors in the UI

--- a/app/views/verticals_shared/_related_vertical.html.erb
+++ b/app/views/verticals_shared/_related_vertical.html.erb
@@ -29,7 +29,7 @@ This is expecting the following local variables:
       <span class="edit-toggle">
         <a href="<%= vertical_vertical_index_path vertical_from, vertical_to %>">
 		  <button class="btn btn-sm btn-link" data-toggle="tooltip" title="Link to <%= vertical_to_name %>">
-			<span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+			<span class="glyphicon glyphicon-link" aria-hidden="true"></span>
 		  </button>
 		</a>
       </span>
