--- a/app/views/attachments/_attachment_list_item.html.erb
+++ b/app/views/attachments/_attachment_list_item.html.erb
@@ -29,14 +29,14 @@ This is expecting the following local variables:
         <%= form_for(attachment, method: :delete,
             url: vertical_attachment_path(vertical_from, attachment), 
             html: {class: "inline"}) do |f| %>
-          <button type="submit" class="btn btn-default btn-sm">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-            Remove</button>
+          <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Disassociate">
+          <span class="glyphicon glyphicon-remove x-btn" aria-hidden="true"></span> 
+        </button>
         <% end %>
 
         
-        <button type="submit" class="btn btn-default btn-sm toggle-edit-file-attachment">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        <button type="submit" class="btn btn-link btn-sm toggle-edit-file-attachment" data-toggle="tooltip" title="Edit">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
         </button>
       </span>
     <% end %>
